--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -28,12 +28,18 @@
     "@verdaccio/logger": "workspace:5.0.0-alpha.0",
     "@verdaccio/streams": "workspace:*",
     "@verdaccio/utils": "workspace:5.0.0-alpha.0",
+    "@zeit/fetch-retry": "^5.0.0",
     "JSONStream": "1.3.5",
+    "abort-controller": "^3.0.0",
     "lodash": "^4.17.20",
+    "node-fetch": "^3.0.0-beta.9",
     "request": "2.87.0"
   },
   "devDependencies": {
-    "@verdaccio/types": "workspace:*"
+    "@verdaccio/types": "workspace:*",
+    "express": "^5.0.0-alpha.7",
+    "nock": "^13.0.4",
+    "supertest": "^5.0.0"
   },
   "gitHead": "7c246ede52ff717707fcae66dd63fc4abd536982"
 }
